<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colornegro"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="286dp"
        android:layout_marginRight="286dp"
        android:layout_marginBottom="550dp"
        android:background="@color/amarillopastel"
        android:text="@string/texto_director"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="24sp"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <Button
        android:id="@+id/guardar"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="570dp"
        android:text="@string/boton_guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_conversion_absoluteHeight="55dp"
        tools:layout_conversion_absoluteWidth="125dp" />

    <Button
        android:id="@+id/cancelar"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="570dp"
        android:text="@string/boton_cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toEndOf="@+id/guardar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_conversion_absoluteHeight="55dp"
        tools:layout_conversion_absoluteWidth="125dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="286dp"
        android:layout_marginRight="286dp"
        android:layout_marginBottom="555dp"
        android:background="@color/amarillopastel"
        android:text="@string/texto_nombrep"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="24sp"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="325dp"
        android:layout_marginRight="325dp"
        android:layout_marginBottom="313dp"
        android:background="@color/amarillopastel"
        android:text="@string/texto_idioma"
        android:textColor="#000000"
        android:textSize="24sp"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="498dp"
        android:layout_marginRight="498dp"
        android:layout_marginBottom="37dp"
        android:background="@color/amarillopastel"
        android:text="@string/texto_genero"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="24sp"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/genero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="366dp"
        android:layout_marginRight="366dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/hint_director"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="366dp"
        android:layout_marginRight="366dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="@string/hint_pelicula"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.575" />

    <RadioGroup
        android:id="@+id/idioma"
        android:layout_width="222dp"
        android:layout_height="86dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rbingles"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/boton_ingles"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbespañol"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/boton_español"
            android:textSize="24sp" />
    </RadioGroup>

    <Spinner
        android:id="@+id/genero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toTopOf="@+id/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>